2012-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test004.cxx, test/test023.cxx, test/test078.cxx, test/test079.cxx,
 test/test087.cxx:
 - Stop using deprecated notify_listener.
 - Stop using deprecated connection-unaware escaping functions.
2011-12-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/tuple.hxx:
 - Forward-declare pqxx::range_error.
 - pqxx::range_error, not just range_error (problem with g++ -std=c++0x).
 src/Makefile.am:
 - Cosmetic.
 test/unit/test_result_slicing.cxx:
 - Disambiguate tuple as pqxx::tuple, not std::tuple, for C++0x.
 tools/Makefile.am:
 - Prevent include/pqxx from going into the include path.
 - Include path was breaking #include <tuple> in C++0x standard headers!
2011-11-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/preprelease:
 - Removed.
2011-11-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/sign-tarball:
 - New tool.
 - Creates GPG signature & hash sums for tarball.
2011-11-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 debian/changelog:
 - Real start of 4.0 series.
2011-11-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/subtransaction.hxx, src/subtransaction.cxx:
 - Explicit subtransaction(subtransaction &) constructor.
 - Makes it easier to nest subtransactions inside subtransactions.
 - Thanks Chris Angelico for reporting the problem.
2011-11-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, doc/Makefile.am:
 - Fixed fail-if-no-doxygen logic.  Really fails now.
 - Also fail if xmlto is missing (and documentation build not disabled).
 - Really fixes #245 (I hope).
2011-11-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Makefile.am:
 - Fail if doxygen not available (and documentation build not disabled).
 - Fixes #245.  Thanks Chris Angelico.
2011-11-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/performance.hxx:
 - Don't mention tablestreams any more.
 - Fixes #246.  Thanks Chris Angelico.
2011-11-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx,